--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,3 +1,3 @@
-title: Course-in-a-Box
-description: An open-source project for creating online courses, built by <a href="https://www.p2pu.org">P2PU</a>
+title: Thoughtful supervision of graduate research students
+description: An open, inclusive course, created by <a href="https://www.p2pu.org">P2PU</a>
 modules: [setup, content, customize]
